== Unreleased

Improvements::

    * add "Run" menu

Bug Fixes::

	* SELECT CASE autoformat fixed
    * Editor line join folding fixed

== 0.7.0alpha1
