@@ -10,7 +10,7 @@ SRCS = cond1.bas cond2.bas cond3.bas cond4.bas cond5.bas cond6.bas \
 		exp1.bas exp2.bas \
 		extcall2.bas \
 		loop1.bas loop2.bas loop3.bas loop4.bas loop5.bas loop6.bas loop7.bas loop8.bas \
-		loop9.bas loop10.bas loop11.bas loop12.bas loop13.bas loop14.bas \
+		loop9.bas loop10.bas loop11.bas loop12.bas loop13.bas loop14.bas loop15.bas \
 	    opbool.bas opbyte.bas opint.bas oplong.bas opsingle.bas opubyte.bas opuint.bas opulong.bas \
 	    oop1.bas oop2.bas oop3.bas oop4.bas \
 	    scopes1.bas scopes2.bas scopes3.bas \
